Increase the size of the corner dragging for the box on mobile devices. Fix an error when calculating use scores.

--- a/front-end/css/BoxLabelingTool.css
+++ b/front-end/css/BoxLabelingTool.css
@@ -173,28 +173,28 @@
     }
 
     .box-labeling-tool .box-labeling-tool-videos .segmentation-container .bbox .resizer {
-        width: 20px;
-        height: 20px;
+        width: 22px;
+        height: 22px;
         border: 0;
     }
 
     .box-labeling-tool .box-labeling-tool-videos .segmentation-container .bbox .resizer.top-left {
-        top: -10px;
-        left: -10px;
+        top: -11px;
+        left: -11px;
     }
 
     .box-labeling-tool .box-labeling-tool-videos .segmentation-container .bbox .resizer.top-right {
-        top: -10px;
-        right: -10px;
+        top: -11px;
+        right: -11px;
     }
 
     .box-labeling-tool .box-labeling-tool-videos .segmentation-container .bbox .resizer.bottom-left {
-        bottom: -10px;
-        left: -10px;
+        bottom: -11px;
+        left: -11px;
     }
 
     .box-labeling-tool .box-labeling-tool-videos .segmentation-container .bbox .resizer.bottom-right {
-        bottom: -10px;
-        right: -10px;
+        bottom: -11px;
+        right: -11px;
     }
 }
